2 fix contrast errors: font weight and contrast

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     --text: #08080c;
-    --background: #f9f8f8;
+    --background: #ffffff;
     --primary: #208901;
     --secondary: #1f2c3b;
     --accent: #226407;
